epochX/cudacpp/tput/logs_eemumu_mad/log_eemumu_mad_f_inl0_hrd0.txt

Building in /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum
BACKEND=cppavx2 (was cppauto)
OMPFLAGS=
FPTYPE='d'
HELINL='0'
HRDCOD='0'
HASCURAND=hasNoCurand
HASHIPRAND=hasNoHiprand
Building in BUILDDIR=build.auto_d_inl0_hrd0 for tag=avx2_d_inl0_hrd0_hasNoCurand_hasNoHiprand (USEBUILDDIR == 1)
make: Nothing to be done for 'gtestlibs'.
make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

DATE: 2024-09-17_09:03:07

On uan01 [CPU: AMD EPYC 7A53 64-Core Processor] [GPU: AMD INSTINCT MI200]:
=========================================================================
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum/build.hip_f_inl0_hrd0/check_hip.exe -p 2048 256 12 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum/build.hip_f_inl0_hrd0/check_hip.exe: Floating point exception
       766,476,010      cycles:u                         #    2.323 GHz                      (74.78%)
         2,430,705      stalled-cycles-frontend:u        #    0.32% frontend cycles idle     (75.86%)
         6,550,118      stalled-cycles-backend:u         #    0.85% backend cycles idle      (76.34%)
     1,341,880,376      instructions:u                   #    1.75  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (75.25%)
       0.390122279 seconds time elapsed
-------------------------------------------------------------------------
runTest /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum/build.hip_f_inl0_hrd0/runTest_hip.exe
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
[  PASSED  ] 4 tests.
DEBUG: MEK (no multichannel) processed 512 events across 2 channels { no-multichannel : 512 }
INFO: No Floating Point Exceptions have been reported
DEBUG: MEK (channelid array) processed 512 events across 2 channels { 1 : 256, 2 : 256 }
INFO: No Floating Point Exceptions have been reported
-------------------------------------------------------------------------
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum/build.hip_f_inl0_hrd0/check_hip.exe --common -p 2 64 2
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/ee_mumu.mad/SubProcesses/P1_epem_mupmum/build.hip_f_inl0_hrd0/fcheck_hip.exe 2 64 2
Avg ME (C++/GPU)   = 
Avg ME (F77/GPU)   = 1.2828036060454906E-002
  File "<string>", line 1
    me1=; me2=1.2828036060454906E-002; reldif=abs((me2-me1)/me1); print('Relative difference =', reldif); ok = reldif <= 5E-3; print ( '%s (relative difference %s 5E-3)' % ( ('OK','<=') if ok else ('ERROR','>') ) )
        ^
SyntaxError: invalid syntax
